--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,1 +1,9 @@
-image: gitpod/workspace-dotnet
+image:
+  file: .gitpod.Dockerfile
+
+tasks:
+  - name: Restore & Build
+    init: |
+      dotnet dev-certs https 
+      dotnet restore
+      dotnet build
